페이지 메뉴 범위 지정